<resources>
    <string name="app_name">Restaurant POS</string>
    <string name="Add">เพิ่ม</string>
    <string name="main_title">รายได้</string>
    <string name="addrestaurant">เพิ่มร้านค้า</string>
    <string name="export">Export</string>
    <string name="restmanage">จัดการร้านอาหาร</string>
    <string name="RestaurantName">ชื่อร้าน</string>
    <string name="headeredit">textheader_editactivity</string>
    <string name="Delete">ลบ</string>
    <string name="save">บันทึก</string>
    <string name="SaveSuccess">บันทึกสำเร็จ</string>
    <string name="SaveFailed">บันทึกไม่สำเร็จ</string>
    <string name="DeleteSuccess">ลบสำเร็จ</string>
    <string name="DeleteFailed">ลบไม่สำเร็จ</string>
    <string name="NameMatch_Error">ไม่สามารถใช้ชื่อนี้ได้ ชื่อนี้ถูกใช้แล้ว</string>
    <string name="rest_id">Restaurant_Id</string>
    <string name="addmenu">เพิ่มรายการอาหาร</string>
    <string name="cancle">ยกเลิก</string>
    <string name="agree">ตกลง</string>
    <string name="menuname">ชื่อรายการ</string>
    <string name="price">ราคา</string>
    <string name="Textempty">กรุณากรอกข้อมูลนี้</string>

    //SharedPreferences
    <string name="RestaurantPref">RestaurantSharedPreferences</string>
    <string name="CartStatus">Isitemincart</string>
    <string name="Incart_restID">Restaurant_ID_Incart</string>
    <string name="Incart_listMenu">All_Menu_incart</string>
    <string name="Pay">ชำระเงิน</string>
    <string name="thaibaht">฿</string>
    <string name="allmenu">รายการที่สั่ง</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>